--- a/lesson_6_dop/index.html
+++ b/lesson_6_dop/index.html
@@ -10,7 +10,7 @@
   <body>
 	<div class="background-sky hero"></div>
 	<div class="hero-headline">
-Material disign shop
+Material design shop
 	</div>
 	<div class="open">
 		<a class="open-btn " id="open-btn" title="Жми, не бойся">Открыть магазин</a>
